--- a/sass/image-preview.scss
+++ b/sass/image-preview.scss
@@ -1,5 +1,26 @@
 .image-preview{
 	display: inline-block;
+	position: relative;
+}
+
+.image-preview .glyphicon {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 50px;
+	opacity: .5;
+	color: white;
+}
+
+.image-preview .inset {
+	position: absolute;
+	bottom : 5px;
+	left: 0px;
+	width: 100%;
+	background-color: white;
+	text-align: center;
+	opacity: .7;
 }
 
 .image-preview img{
