--- a/sass/topic.scss
+++ b/sass/topic.scss
@@ -1,3 +1,14 @@
 .topic {
 	text-align: center;
 }
+.topic .image-preview {
+	animation: fadein .65s ease-out;
+	@keyframes fadein{
+		0%{
+			opacity: 0;
+		}
+		100% {
+			opacity: 1.0;
+		}
+	}
+}
